# vibe-kanban

./: .dockerignore  AGENT_SETUP_README.md  CI_CD_IMPLEMENTATION.md  CI_CD_RECOMMENDATIONS.md  CONTAINER_SETUP.md  Cargo.toml  DEMONSTRATION_PLAN.md  Dockerfile  Dockerfile.task-agent  GALLERY_SELECT_FUNCTIONALITY_REVIEW.md  INTEGRATIONS_PAGE_PROJECT_PLAN.md  MOBILE_APP_INTEGRATION_PLAN.md  PROJECT_MANAGER_AGENT_PLAN.md  PR_DESCRIPTION.md  README.md  TDD_IMPLEMENTATION_PLAN.md  TEST_RESULTS_SUMMARY.md  demo-integrations-ui.js  docker-compose.task-agents.yml  package-lock.json  package.json  playwright-integrations-test.js  pnpm-lock.yaml  rustfmt.toml  setup.js  test-results.txt
.github/: SECURITY.md  dependabot.yml
backend/: Cargo.toml  build.rs  deny.toml
frontend/: .eslintrc.json  .eslintrc.maximum.json  .lighthouserc.json  ACCESSIBILITY_TESTING_README.md  API_MOCK_FIXES_SUMMARY.md  FINAL_TEST_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_SUMMARY.md  JEST_SETUP.md  PROJECTS_PAGE_INTEGRATION_TEST_FIXES.md  TESTING_README.md  TEST_FAILURE_ANALYSIS.md  VISUAL_GRAPHS_IMPLEMENTATION_PLAN.md  VISUAL_GRAPHS_README.md  analyze-test-failures.js  debug_selection.js  jest.config.cjs  jest.config.js  package-lock.json  package.json  test-failure-analysis.json  tsconfig.json  validate-tests.cjs  vite.config.ts  vitest.config.ts
integrations-demo-assets/: integrations-demo.html
mobile/: README.md  app.json  package.json  tsconfig.json
scripts/: build-task-agent.sh  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
(+229 files in other folders)
