[package]
name = "vibe-kanban-desktop"
version = "0.0.48"
description = "Vibe Kanban Desktop Application"
authors = ["you"]
license = ""
repository = ""
default-run = "vibe-kanban-desktop"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-notification = "2.0"
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
vibe-kanban = { path = "../backend" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
